Pull changes from cloud editors

--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -1,2 +1,12 @@
-<h1>{{ 'general.404.title' | t }}</h1>
-<p>{{ 'general.404.subtext_html' | t }}</p>
+
+{% include 'page-header' %}
+
+
+<section class='page-section'>
+<div class='inner-column'>
+  
+  <h1 class='visually-hidden'>{{ 'general.404.title' | t }}</h1>
+  <p class='visually-hidden'>{{ 'general.404.subtext_html' | t }}</p>
+
+</div>
+</section>
