--- a/templates/collection.list.liquid
+++ b/templates/collection.list.liquid
@@ -1,3 +1,7 @@
+
+<section class='page-section'>
+<div class='inner-column'>
+  
 {% paginate collection.products by 2 %}
   <h1>{{ collection.title }}</h1>
   {% for product in collection.products %}
@@ -13,5 +17,7 @@
     <p>no matches</p>
   {% endfor %}
   {% if paginate.pages > 1 %}{{ paginate | default_pagination }}{% endif %}
-{% endpaginate %}
-
+{% endpaginate %} 
+ 
+</div>
+</section>
