--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,51 +1,24 @@
 <!doctype html>
-<head>
-  <title>{{ page_title }}</title>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="{{ page_description | escape }}">
-  <link rel="canonical" href="{{ canonical_url }}">
-  <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-  {{ content_for_header }} <!-- Header hook for plugins -->
-  {{ 'application.scss.css' | asset_url | stylesheet_tag }}
-  {{ 'application.js' | asset_url | script_tag }}
-</head>
-<body>
+  <head>
+    {% include 'head' %}
+    {{ content_for_header }} <!-- insert for plugins -->
+  </head>
 
-  <header class='page-section site-header'>
-  <div class='inner-column'>
-      
-    <h1>Hello!!! test test test...</h1>
+  <body class='site'>
 
-  </div>
-  </header>
+    <header class='page-section site-header'>
+    <div class='inner-column'>
+      {% include 'masthead' %}
+    </div>
+    </header>
 
-  {% for link in linklists.main-menu.links %}
-    {% assign child_list_handle = link.title | handleize %}
-    {% if linklists[child_list_handle].links != blank %}
-      <a href="{{ link.url }}">{{ link.title }}</a>
-      [{% for childlink in linklists[child_list_handle].links %}
-        <a href="{{ childlink.url }}">{{ childlink.title | escape }}</a>
-      {% endfor %}]
-    {% else %}
-      <a href="{{ link.url }}">{{ link.title }}</a>
-    {% endif %}
-  {% endfor %}
+    <main class='page-content'>
+      {{ content_for_layout }}
+    </main>
 
-  <a href="/cart">cart</a>
+    <footer class='site-footer'>
+      {% include 'footer-content' %}
+    </footer>
 
-  {% if shop.customer_accounts_enabled %}
-    {% if customer %}
-      <a href="/account">account</a>
-      {{ 'log out'  | customer_logout_link }}
-    {% else %}
-      {{ 'log in ' | customer_login_link }}
-      {{ 'register' | customer_register_link }}
-    {% endif %}
-  {% endif %}
-
-  <main role="main">
-    {{ content_for_layout }}asdfasfdasf
-  </main>
-</body>
+  </body>
 </html>
