--- a/templates/page.style-guide.liquid
+++ b/templates/page.style-guide.liquid
@@ -1,6 +1,10 @@
 
 {% include 'page-header' %}
 
+{% section 'standard-diptych' %}
+
+{% section 'standard-diptych' %}
+
 {% include 'color-swatches' %}
 
 {% include 'generic-page-content' %}
