Save to find out why it’s not reflecting changes

--- a/sections/standard-diptych.liquid
+++ b/sections/standard-diptych.liquid
@@ -38,8 +38,8 @@
       {
         "type": "text",
         "id": "section-heading",
-        "label": "Section heading",
-        "default": "Section heading....."
+        "label": "Section heading  dsfsdf",
+        "default": "Section heading"
       },
       {
         "type": "text",
@@ -54,7 +54,7 @@
         "default": "Standard Diptych Subheading"
       },
       {
-        "type": "textarea",
+        "type": "richtext",
         "id": "content",
         "label": "Rich text",
         "default": "Standard Diptych Rich text content. Standard Diptych Rich text content. Standard Diptych Rich text content."
